--- a/KINO/KINO/KINO.csproj
+++ b/KINO/KINO/KINO.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Migrations\201709181023266_MigrateDB.Designer.cs">
       <DependentUpon>201709181023266_MigrateDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710031009509_03102017.cs" />
+    <Compile Include="Migrations\201710031009509_03102017.Designer.cs">
+      <DependentUpon>201710031009509_03102017.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AgeLimit.cs" />
@@ -321,6 +325,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Halls.cshtml" />
+    <Content Include="Views\Manage\ContentManage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -338,6 +343,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201709181023266_MigrateDB.resx">
       <DependentUpon>201709181023266_MigrateDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710031009509_03102017.resx">
+      <DependentUpon>201710031009509_03102017.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
