--- a/KINO/KINO/KINO.csproj
+++ b/KINO/KINO/KINO.csproj
@@ -326,7 +326,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Halls.cshtml" />
     <Content Include="Views\Manage\ContentManage.cshtml" />
-    <Content Include="Views\Home\Film.cshtml" />  </ItemGroup>
+    <Content Include="Views\Home\Film.cshtml" />
+    <Content Include="Views\Home\Sessions.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
