--- a/KINO/KINO/Web.config
+++ b/KINO/KINO/Web.config
@@ -33,11 +33,10 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-    <!--httpErrors errorMode="Custom" existingResponse="Replace">
-    
+  <httpErrors errorMode="Custom" existingResponse="Replace">
+    <clear/>
     <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
-    <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL" />
-  </httpErrors-->
+  </httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
