--- a/KINO/KINO/Web.config
+++ b/KINO/KINO/Web.config
@@ -33,10 +33,11 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  <httpErrors errorMode="Custom" existingResponse="Replace">
-    <clear/>
+    <!--httpErrors errorMode="Custom" existingResponse="Replace">
+    
     <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
-  </httpErrors>
+    <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL" />
+  </httpErrors-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
